Fix spacing on profile and size of picture

--- a/project2-front/src/component/AvatarComponent/UserAvatar.css
+++ b/project2-front/src/component/AvatarComponent/UserAvatar.css
@@ -6,6 +6,6 @@
 }
 
 .UserAvatarPic {
-    height: 42px !important;
-    width: 42px !important;
+    height: 48px !important;
+    width: 48px !important;
 }
