--- a/project2-front/src/component/UserProfile/UserDisplay.css
+++ b/project2-front/src/component/UserProfile/UserDisplay.css
@@ -11,7 +11,7 @@
 }
 
 .UserDisplayUserAvatar {
-    height: 82px !important;
-    width: 82px !important;
+    height: 90px !important;
+    width: 90px !important;
     margin-left: 10px !important;
 }
